--- a/assets/additional_styles.css
+++ b/assets/additional_styles.css
@@ -1,8 +1,73 @@
-body {
-  font-family: "Montserrat";
-  font-size: 16px;
+.who-delivers {
+  background: url("images/main-hero.jpg") no-repeat center center;
+  background-size: cover;
+  color: white;
+  height: 500px;
+  padding-top: 150px;
 }
 
+.download-apps {
+    background: url(images/download-hero.jpg) no-repeat center center;
+    background-size: cover;
+    color: white;
+    height: 500px;
+    padding-top: 150px;
+}
+
+footer {
+    background-color: rgb(50, 50, 170);
+}
+
+footer h4 {
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+footer li {
+    color: white;
+    margin-bottom: 10px;
+}
+.store-badge {
+    width: 200px;
+}
+
+.spotlight-image {
+    width: 200px;
+}
+
+.spotlight-image {
+    width: 200px;
+    border-radius: 100px;
+}
+
+.user-image {
+    width: 50px;
+}
+
+.store-icon {
+  height: 60px;
+  width: 200px;
+}
+
+body {
+  font-family: "Montserrat";
+  font-size: 14px;
+}
+
+.navbar {
+  background-color: rgb(246,52,64);
+  background-size: cover;
+}
+
+.navbar a {
+    color: white !important;
+}
+
+.sound-bites, .why-order {
+    background-color: rgb(238, 238, 238);
+}
 h1, h2, h3, h4 {
   font-weight: 700;
 }
